Add GA4 tracking code

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -123,4 +123,14 @@
   {% endif %}
 
   {% include metadata-hook.html %}
+
+  <!-- Google tag (gtag.js) @20250405-->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-C469CEJ4NH"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-C469CEJ4NH');
+  </script>
 </head>
